# poraque

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: software_architecture.md  strategy.md
src/poraque/: __init__.py  _version.py  density_matrix.py  engine.py  functionals.py  grid.py  ofdft.py  potentials.py  tf.py  version.py
