[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "poraque"
version = "0.0.5"
authors = [
  { name="Leandro Seixas", email="leandro.rocha@ilum.cnpem.br" },
]
description = "For electronic structure calculations."
readme = "README.md"
license = {file = "LICENSE"} 
requires-python = ">=3.10"
dependencies = [
    'numpy',
    'pandas',
    'ase',
    'scipy',
    'matplotlib'
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics"
]

[project.urls]
"Homepage" = "https://github.com/seixasgroup/poraque"
