[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "poraque"
dynamic = ["version"]
authors = [
  { name="Leandro Seixas Rocha", email="leandro.rocha@ilum.cnpem.br" },
]
description = "For electronic structure calculations"
readme = "README.md"
license = {file = "LICENSE"} # MIT License
requires-python = ">=3.10"
dependencies = [
    'numpy',
    'pandas',
    'ase',
    'scipy',
    'matplotlib'
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics"
]

[project.urls]
"Homepage" = "https://github.com/seixas-research/poraque"

[tool.hatch.version]
path = "src/poraque/version.py"

